monitoring/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.lukeaddison.co.uk/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.lukeaddison.co.uk/oauth2/start?rd=https://$host$request_uri"
spec:
  tls:
  - secretName: grafana-tls
    hosts:
    - grafana.lukeaddison.co.uk
  rules:
  - host: grafana.lukeaddison.co.uk
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
